--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
+appdirs==1.4.4
 asgiref==3.4.1
+black==21.7b0
 click==8.0.1
 fastapi==0.68.0
+greenlet==1.1.0
 h11==0.12.0
 httptools==0.2.0
+mypy-extensions==0.4.3
+pathspec==0.9.0
+prometheus-client==0.11.0
+prometheus-fastapi-instrumentator==5.7.1
 pydantic==1.8.2
 python-dotenv==0.19.0
 PyYAML==5.4.1
+regex==2021.8.3
+SQLAlchemy==1.4.22
 starlette==0.14.2
+tomli==1.2.0
 typing-extensions==3.10.0.0
 uvicorn==0.14.0
 uvloop==0.15.3
