--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ mypy-extensions==0.4.3
 pathspec==0.9.0
 prometheus-client==0.11.0
 prometheus-fastapi-instrumentator==5.7.1
+psycopg2==2.9.1
 pydantic==1.8.2
 python-dotenv==0.19.0
 PyYAML==5.4.1
