--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,3 +1,4 @@
 FROM postgres:alpine3.14
 
-ADD ./model.sql /docker-entrypoint-initdb.d
+ADD ./final_db.sql /docker-entrypoint-initdb.d
+ADD ./test_db.sql /docker-entrypoint-initdb.d
