--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
-      PGDATA: ./data/postgres
+      # PGDATA: ./data/postgres
     ports:
-      - "54321:5432"
+      - "5432:5432"
     restart: unless-stopped
