--- a/.github/workflows/build_api.yml
+++ b/.github/workflows/build_api.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - run: |
           apk add --no-cache make
-          make docker-lint
+          make docker-lint-api
   security-check:
     runs-on: ubuntu-latest
     strategy:
