Changed ADD for COPY in DB dockerfile

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,4 +1,4 @@
 FROM postgres:alpine3.14
 
-ADD ./final_db.sql /docker-entrypoint-initdb.d
-ADD ./test_db.sql /docker-entrypoint-initdb.d
+COPY ./final_db.sql /docker-entrypoint-initdb.d
+COPY ./test_db.sql /docker-entrypoint-initdb.d
