--- a/.github/workflows/build_api.yml
+++ b/.github/workflows/build_api.yml
@@ -71,7 +71,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64
           push: true
           tags: |
             adrianvillanueva997/foodservice_api:${{ github.sha }}
